--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "author": "Artsiom Shamsutdzinau <shamsartem@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "eslint": "^7.32.0",
+    "eslint-plugin-compat": "^3.13.0",
     "postcss-nested": "^5.0.5",
     "postcss-preset-env": "^6.7.0",
     "stylelint": "^13.13.1",
     "stylelint-config-idiomatic-order": "^8.1.0",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-no-unsupported-browser-features": "^5.0.1",
+    "typescript": "^4.4.2",
     "vite": "2.4.4",
     "vite-plugin-elm": "^2.4.0"
   },
