--- a/package.json
+++ b/package.json
@@ -5,31 +5,35 @@
   "browser": "index.js",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "lint": "eslint . --fix && stylelint ./**/*.css --fix && tsc --noEmit"
   },
   "author": "Artsiom Shamsutdzinau <shamsartem@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
     "eslint": "^7.32.0",
     "eslint-plugin-compat": "^3.13.0",
-    "postcss-nested": "^5.0.5",
+    "eslint-plugin-import": "^2.24.2",
+    "postcss-nested": "^5.0.6",
     "postcss-preset-env": "^6.7.0",
     "stylelint": "^13.13.1",
     "stylelint-config-idiomatic-order": "^8.1.0",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-no-unsupported-browser-features": "^5.0.1",
     "typescript": "^4.4.2",
-    "vite": "2.4.4",
-    "vite-plugin-elm": "^2.4.0"
+    "vite": "2.5.3",
+    "vite-plugin-elm": "^2.4.3"
   },
   "browserslist": [
-    "defaults"
-  ],
-  "dependencies": {
-    "comlink": "^4.3.1",
-    "focus-trap": "^6.6.1",
-    "hyperlist": "^1.0.0"
-  }
+    "last 2 Chrome major versions",
+    "last 2 ChromeAndroid major versions",
+    "last 2 Firefox major versions",
+    "last 2 FirefoxAndroid major versions",
+    "last 2 Safari major versions",
+    "last 2 ios_saf major versions",
+    "last 2 Opera major versions",
+    "last 2 Samsung major versions"
+  ]
 }
