--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --fix && stylelint ./**/*.css --fix && tsc --noEmit"
+    "lint": "eslint . --fix && stylelint ./**/*.css --fix && tsc --noEmit",
+    "test": "elm-test"
   },
   "author": "Artsiom Shamsutdzinau <shamsartem@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
+    "elm-test": "^0.19.1-revision7",
     "eslint": "^7.32.0",
     "eslint-plugin-compat": "^3.13.0",
     "eslint-plugin-import": "^2.24.2",
@@ -35,5 +37,8 @@
     "last 2 ios_saf major versions",
     "last 2 Opera major versions",
     "last 2 Samsung major versions"
-  ]
+  ],
+  "dependencies": {
+    "bson": "^4.6.1"
+  }
 }
