--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,6 +3,7 @@
   "plugins": ["stylelint-no-unsupported-browser-features"],
   "rules": {
     "plugin/no-unsupported-browser-features": [true, { "severity": "warning" }],
-    "at-rule-empty-line-before": ["always", { "except": ["inside-block"] }]
+    "at-rule-empty-line-before": ["always", { "except": ["inside-block"] }],
+    "declaration-block-no-duplicate-properties": true
   }
 }
