--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "npm run check && vite build",
+    "serve": "vite preview",
+    "serve-https": "serve dist",
     "lint-ts": "eslint src/**/*.ts --fix",
     "lint-css": "stylelint ./**/*.css --fix",
     "type-check": "tsc --noEmit",
@@ -21,6 +23,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-compat": "^3.13.0",
     "eslint-plugin-import": "^2.24.2",
+    "https-localhost": "^4.7.1",
     "postcss-nested": "^5.0.6",
     "postcss-preset-env": "^6.7.0",
     "stylelint": "^13.13.1",
@@ -29,7 +32,8 @@
     "stylelint-no-unsupported-browser-features": "^5.0.1",
     "typescript": "^4.4.2",
     "vite": "2.5.3",
-    "vite-plugin-elm": "^2.4.3"
+    "vite-plugin-elm": "^2.4.3",
+    "vite-plugin-pwa": "^0.11.13"
   },
   "browserslist": [
     "last 2 Chrome major versions",
