--- a/package.json
+++ b/package.json
@@ -17,34 +17,30 @@
   "author": "Artsiom Shamsutdzinau <shamsartem@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
     "elm-test": "^0.19.1-revision7",
-    "eslint": "^8.14.0",
+    "eslint": "^8.16.0",
     "eslint-plugin-compat": "^4.0.2",
     "eslint-plugin-import": "^2.26.0",
     "https-localhost": "^4.7.1",
     "postcss-nested": "^5.0.6",
-    "postcss-preset-env": "^7.4.4",
-    "stylelint": "^14.8.1",
+    "postcss-preset-env": "^7.6.0",
+    "stylelint": "^14.8.3",
     "stylelint-config-idiomatic-order": "^8.1.0",
     "stylelint-config-standard": "^25.0.0",
     "stylelint-no-unsupported-browser-features": "^5.0.3",
     "typescript": "^4.6.4",
-    "vite": "2.9.6",
+    "vite": "2.9.9",
     "vite-plugin-elm": "^2.6.1",
     "vite-plugin-pwa": "^0.12.0"
   },
   "browserslist": [
-    "last 2 Chrome major versions",
-    "last 2 ChromeAndroid major versions",
-    "last 2 Firefox major versions",
-    "last 2 FirefoxAndroid major versions",
-    "last 2 Safari major versions",
-    "last 2 ios_saf major versions",
-    "last 2 Samsung major versions"
+    "last 1 chrome version",
+    "last 1 firefox version",
+    "last 1 safari version"
   ],
   "dependencies": {
-    "bson": "^4.6.3"
+    "bson": "^4.6.4"
   }
 }
