--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,15 +2,6 @@
   "files.associations": {
     "*.css": "scss"
   },
-  "prettier.arrowParens": "avoid",
-  "prettier.semi": false,
-  "prettier.singleQuote": true,
-  "prettier.trailingComma": "all",
-  "prettier.printWidth": 80,
-  "editor.rulers": [80],
-  "editor.tabSize": 2,
-  "editor.formatOnSave": true,
-  "files.autoSave": "onFocusChange",
   "[scss]": {
     "editor.defaultFormatter": "stylelint.vscode-stylelint"
   },
@@ -18,7 +9,7 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[html]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "vscode.html-language-features"
   },
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
