Add hello workflow

--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
     "vite-plugin-pwa": "^0.12.0"
   },
   "browserslist": [
-    "last 1 chrome version",
-    "last 1 firefox version",
-    "last 1 safari version"
+    "last 2 chrome version",
+    "last 2 firefox version",
+    "last 2 safari version"
   ],
   "dependencies": {
     "ajv": "^8.11.0",
-    "bson": "^4.6.4",
-    "socket.io-client": "^4.5.1",
-    "vite-compatible-simple-peer": "^9.11.0"
+    "buffer": "^6.0.3",
+    "jszip": "^3.10.0",
+    "socket.io-client": "^4.5.1"
   },
   "prettier": {
     "trailingComma": "all",
