Use elm-watch, add better stats

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,30 @@
-elm-stuff
-dist
-node_modules
-.DS_Store
-.idea
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-public/avm.wasm
-public/marine-js.wasm
-public/marine-js.web.js
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# elm
+elm-stuff
+public/elm.js
+
+public/.vercel
