--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "browser": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "npm run check && vite build",
+    "postinstall": "elm-tooling install",
+    "dev": "run-pty % elm-watch hot % vite",
+    "build": "elm-watch make --optimize && tsc && vite build",
     "serve": "vite build && vite preview",
     "serve-https": "serve dist",
     "lint-ts": "eslint ./src/**/*.ts --fix",
@@ -17,25 +18,26 @@
   "author": "Artsiom Shamsutdzinau <shamsartem@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "@tsconfig/strictest": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "@typescript-eslint/parser": "^5.25.0",
+    "@tsconfig/strictest": "^1.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "elm-test": "^0.19.1-revision7",
-    "eslint": "^8.16.0",
+    "esbuild": "^0.15.15",
+    "eslint": "^8.28.0",
     "eslint-plugin-compat": "^4.0.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "https-localhost": "^4.7.1",
-    "postcss-nested": "^5.0.6",
-    "postcss-preset-env": "^7.6.0",
-    "stylelint": "^14.8.3",
-    "stylelint-config-idiomatic-order": "^8.1.0",
-    "stylelint-config-standard": "^25.0.0",
-    "stylelint-no-unsupported-browser-features": "^5.0.3",
-    "typescript": "^4.6.4",
-    "vite": "2.9.9",
-    "vite-plugin-elm": "^2.6.1",
-    "vite-plugin-pwa": "^0.12.0"
+    "postcss-nested": "^6.0.0",
+    "postcss-preset-env": "^7.8.3",
+    "stylelint": "^14.15.0",
+    "stylelint-config-idiomatic-order": "^9.0.0",
+    "stylelint-config-standard": "^29.0.0",
+    "stylelint-no-unsupported-browser-features": "^6.0.1",
+    "typescript": "^4.9.3",
+    "uglify-js": "^3.17.4",
+    "vite": "3.2.4",
+    "vite-plugin-pwa": "^0.13.3"
   },
   "browserslist": [
     "last 2 chrome version",
@@ -43,10 +45,13 @@
     "last 2 safari version"
   ],
   "dependencies": {
-    "ajv": "^8.11.0",
+    "ajv": "^8.11.2",
     "buffer": "^6.0.3",
-    "jszip": "^3.10.0",
-    "socket.io-client": "^4.5.1"
+    "elm-tooling": "^1.10.0",
+    "elm-watch": "^1.1.0",
+    "jszip": "^3.10.1",
+    "run-pty": "^4.0.3",
+    "socket.io-client": "^4.5.4"
   },
   "prettier": {
     "trailingComma": "all",
