--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "postinstall": "elm-tooling install",
     "dev": "run-pty % elm-watch hot % vite",
     "build": "elm-watch make --optimize && tsc && vite build",
-    "serve": "vite build && vite preview",
+    "start": "vite preview",
     "serve-https": "serve dist",
     "lint-ts": "eslint ./src/**/*.ts --fix",
     "lint-css": "stylelint ./src/**/*.css --fix",
@@ -21,8 +21,9 @@
     "@tsconfig/strictest": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
+    "elm": "^0.19.1-6",
     "elm-test": "^0.19.1-revision7",
-    "esbuild": "^0.15.15",
+    "esbuild": "^0.27.1",
     "eslint": "^8.28.0",
     "eslint-plugin-compat": "^4.0.2",
     "eslint-plugin-import": "^2.26.0",
@@ -36,7 +37,7 @@
     "stylelint-no-unsupported-browser-features": "^6.0.1",
     "typescript": "^4.9.3",
     "uglify-js": "^3.17.4",
-    "vite": "3.2.4",
+    "vite": "^3.2.11",
     "vite-plugin-pwa": "^0.13.3"
   },
   "browserslist": [
